--- a/add-user.html
+++ b/add-user.html
@@ -708,15 +708,15 @@
                                             <input type="checkbox" value=""
                                                 class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary" />
                                             <label for="default-checkbox"
-                                                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Withdrawl
+                                                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Withdrawal
                                                 Log</label>
                                         </div>
                                         <div class="flex items-center">
                                             <input type="checkbox" value=""
                                                 class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary" />
                                             <label for="default-checkbox"
-                                                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Game
-                                                Log</label>
+                                                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Payment
+                                                and Receipts</label>
                                         </div>
                                         <div class="flex items-center">
                                             <input type="checkbox" value=""
@@ -729,8 +729,8 @@
                                             <input type="checkbox" value=""
                                                 class="w-4 h-4 border-primary rounded bg-gray-50 checked:bg-primary dark:checked:bg-primary" />
                                             <label for="default-checkbox"
-                                                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Ludo
-                                                Game</label>
+                                                class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">
+                                                Games</label>
                                         </div>
                                     </div>
                                 </div>
