--- a/phone-otp.html
+++ b/phone-otp.html
@@ -811,7 +811,16 @@
         receipt: "verified",
       },
     ];
-
+    const getStatusClass = (status) => {
+      switch (status) {
+        case 'success':
+          return 'bg-green-100 text-green-80 dark:bg-green-900 dark:text-green-300';
+        case 'failed':
+          return 'bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-300';
+        default:
+          return 'bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300'
+      }
+    }
     const tableOTP = document.getElementById("tbodyOTP");
     const tableOTPHTML = phoneOTP
       .map(
@@ -828,7 +837,7 @@
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.phone}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.otp}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.channel}</td>
-          <td class="px-6 py-4 text-gray-900 dark:text-white"><span class="bg-red-100 text-red-800 text-sm me-2 px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300">${log.status} </span>
+          <td class="px-6 py-4 text-gray-900 dark:text-white"><span class="text-sm me-2 px-2.5 py-0.5 rounded ${getStatusClass(log.status)}">${log.status}</span>
           </td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.date}</td>
         </tr>
