--- a/user-details.html
+++ b/user-details.html
@@ -652,9 +652,9 @@
               </thead>
               <tbody>
                 <tr
-                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500">
+                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500 text-xs lg:text-sm">
                   <th scope="row" class="px-6 py-4">
-                    <div class="flex items-start gap-2 mmin-w-[200px]">
+                    <div class="flex items-start gap-2">
                       <img class="w-10 h-10 rounded-full object-cover object-center"
                         src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                         alt="loading" />
@@ -664,9 +664,9 @@
                         </p>
                         <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">ID: </span>
-                          102.87.33.177
+                          PG1409
                         </p>
-                        <!-- <p class="text-gray-500 dark:text-gray-400 font-normal">
+                        <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Name: </span>Bryson
                           Tiller
                         </p>
@@ -681,7 +681,7 @@
                         <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Email:</span>
                           brysontiller@gmail.com
-                        </p> -->
+                        </p>
                       </div>
                     </div>
                   </th>
@@ -689,7 +689,7 @@
                     <div class="flex flex-col gap-1">
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Registration Time:</span>
-                        2/28/2024, 12:!2pm
+                        2/28/2024, 12:12pm
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Last Login Time:</span>
@@ -704,15 +704,15 @@
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Dev Model:</span>
-                        102.87.33.177
+                        Galaxy Note 10
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">System Version:</span>
-                        102.87.33.177
+                        Android 14
                       </p>
                     </div>
                   </td>
-                  <td class="px-6 py-2">
+                  <td class="px-6 py-2 max-w-sm">
                     <!-- Modal toggle -->
                     <div class="flex items-center flex-wrap gap-1 lg:gap-2">
                       <a href="#" type="button" data-modal-target="detailsModal" data-modal-show="detailsModal"
