--- a/user-info.html
+++ b/user-info.html
@@ -666,7 +666,7 @@
                           <span class="font-semibold">ID: </span>
                           102.87.33.177
                         </p>
-                        <!-- <p class="text-gray-500 dark:text-gray-400 font-normal">
+                        <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Name: </span>Bryson
                           Tiller
                         </p>
@@ -681,7 +681,7 @@
                         <p class="text-gray-500 dark:text-gray-400 font-normal">
                           <span class="font-semibold">Email:</span>
                           brysontiller@gmail.com
-                        </p> -->
+                        </p>
                       </div>
                     </div>
                   </th>
@@ -704,15 +704,15 @@
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Dev Model:</span>
-                        102.87.33.177
+                        Galaxy Note 10
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">System Version:</span>
-                        102.87.33.177
+                        Android 14
                       </p>
                     </div>
                   </td>
-                  <td class="px-6 py-2">
+                  <td class="px-6 py-2 max-w-sm">
                     <!-- Modal toggle -->
                     <div class="flex items-center flex-wrap gap-1 lg:gap-2">
                       <a href="#" type="button" data-modal-target="detailsModal" data-modal-show="detailsModal"
