--- a/withdrawal-log.html
+++ b/withdrawal-log.html
@@ -634,8 +634,11 @@
                 <select id="status"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary">
                   <option selected>Status</option>
-                  <option value="">Failed</option>
-                  <option value="">Successful</option>
+                  <option value="successful">successful</option>
+                  <option value="pending">pending</option>
+                  <option value="failed">Failed</option>
+                  <option value="abandon">abandon</option>
+                  <option value="reversed">Reversed</option>
                 </select>
               </form>
               <div id="date-range-picker" date-rangepicker
