--- a/highest-topup.html
+++ b/highest-topup.html
@@ -619,7 +619,7 @@
           <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
             Highest Top-Up
           </h1>
-          <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4">
+          <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4 flex items-center justify-between flex-wrap gap-2">
             <div id="date-range-picker" date-rangepicker class="flex items-center justify-start gap-1 w-full lg:w-fit">
               <div class="relative max-w-32">
                 <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
@@ -646,6 +646,25 @@
                   placeholder="To">
               </div>
             </div>
+            <form class="max-w-sm w-full">
+              <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only">Search</label>
+              <div class="relative">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                  <svg class="w-4 h-4 text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                  </svg>
+                </div>
+                <input type="search" id="default-search"
+                  class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary focus:border-primary"
+                  placeholder="Enter user id..." required />
+                <button type="submit"
+                  class="text-white absolute end-2.5 bottom-2.5 bg-primary focus:outline-none font-medium rounded-lg text-sm px-4 py-2">
+                  Search
+                </button>
+              </div>
+            </form>
           </div>
           <div class="flex flex-col">
             <div class="relative overflow-x-auto shadow rounded-lg mt-4">
