--- a/inactive-numbers.html
+++ b/inactive-numbers.html
@@ -700,7 +700,7 @@
         status: "VIP",
         date: "21/4/2024, 2:30:45pm",
         channel: "Flutterwave",
-        txID: "TX67890FGHIJ",
+        txID: "PG67890FGHIJ",
         receipt: "pending",
         phone: "08168478017",
         otp: 4589,
@@ -708,10 +708,10 @@
       {
         id: 2,
         amount: 4500,
-        status: "normal",
+        status: "VIP",
         date: "22/4/2024, 11:50:10am",
         channel: "Stripe",
-        txID: "TX11121JKLMN",
+        txID: "PG11121JKLMN",
         receipt: "verified",
         phone: "08168478017",
         otp: 4589,
@@ -719,10 +719,10 @@
       {
         id: 3,
         amount: 6000,
-        status: "normal",
+        status: "VIP",
         date: "23/4/2024, 8:25:22pm",
         channel: "PayPal",
-        txID: "TX31415OPQRS",
+        txID: "PG31415OPQRS",
         receipt: "check",
         phone: "08168478017",
         otp: 4589,
@@ -733,7 +733,7 @@
         status: "VIP",
         date: "24/4/2024, 7:15:34pm",
         channel: "Kuda",
-        txID: "TX16171TUVWX",
+        txID: "PG16171TUVWX",
         receipt: "verified",
         phone: "08168478017",
         otp: 4589,
@@ -741,10 +741,10 @@
       {
         id: 5,
         amount: 1500,
-        status: "failed",
+        status: "Regular",
         date: "25/4/2024, 4:45:55pm",
         channel: "Square",
-        txID: "TX18282YZABC",
+        txID: "PG18282YZABC",
         receipt: "pending",
         phone: "08168478017",
         otp: 4589,
@@ -752,10 +752,10 @@
       {
         id: 6,
         amount: 2500,
-        status: "pending",
+        status: "VIP",
         date: "26/4/2024, 6:30:48am",
         channel: "Kuda",
-        txID: "TX19393DEFGH",
+        txID: "PG19393DEFGH",
         receipt: "verified",
         phone: "08168478017",
         otp: 4589,
@@ -763,10 +763,10 @@
       {
         id: 7,
         amount: 9000,
-        status: "success",
+        status: "Regular",
         date: "27/4/2024, 12:10:15pm",
         channel: "Paystack",
-        txID: "TX20404IJKLMN",
+        txID: "PG0404IJKLMN",
         receipt: "check",
         phone: "08168478017",
         otp: 4589,
@@ -774,10 +774,10 @@
       {
         id: 8,
         amount: 3500,
-        status: "success",
+        status: "Regular",
         date: "28/4/2024, 1:20:25pm",
         channel: "Flutterwave",
-        txID: "TX21515OPQRS",
+        txID: "PG1515OPQRS",
         receipt: "verified",
         phone: "08168478017",
         otp: 4589,
@@ -785,10 +785,10 @@
       {
         id: 9,
         amount: 4700,
-        status: "Normal",
+        status: "VIP",
         date: "29/4/2024, 9:55:35am",
         channel: "Stripe",
-        txID: "TX22626TUVWX",
+        txID: "PG2626TUVWX",
         receipt: "pending",
         phone: "08168478017",
         otp: 4589,
@@ -799,8 +799,9 @@
         status: "VIP",
         date: "20/4/2024, 10:15:32am",
         channel: "Paystack",
-        txID: "TX12345ABCDE",
+        txID: "PG12345ABCDE",
         receipt: "verified",
+        phone: "08168478017",
       },
     ];
 
@@ -813,7 +814,7 @@
         >
           <th
             scope="row"
-            class="font-normal px-6 py-4 text-gray-900 dark:text-white text-gray-900 whitespace-nowrap dark:text-white"
+            class="font-VIP px-6 py-4 text-gray-900 dark:text-white text-gray-900 whitespace-nowrap dark:text-white"
           >
            ${index + 1}
           </th>
