--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
                 <ul class="flex flex-col w-full pb-10 text-gray-700 dark:text-gray-300">
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">Demo Mode</a>
+                      href="#">Demo Mode</a>
                   </li>
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">API Integration</a>
+                      href="#">API Integration</a>
                   </li>
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">Security</a>
+                      href="#">Security</a>
                   </li>
                   <li>
                     <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
-                      href="/">Bugs</a>
+                      href="#">Bugs</a>
                   </li>
                 </ul>
               </div>
@@ -321,7 +321,7 @@
               </ul>
               <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
                 <li>
-                  <a href="#"
+                  <a href="/login.html"
                     class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white">Sign
                     out</a>
                 </li>
@@ -428,13 +428,6 @@
                   <li>
                     <a href="/withdrawal-log.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Withdrawal
-                      Log
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href="/game-record.html"
-                      class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
                       Log
                     </a>
                   </li>
