--- a/recharge-log.html
+++ b/recharge-log.html
@@ -623,20 +623,43 @@
 
           <div
             class="flex items-center flex-col-reverse lg:flex-row flex-wrap items-center lg:justify-between pb-6 gap-3">
-            <form class="lg:max-w-sm flex items-center w-full">
-              <label class="block mb-2 text-base font-medium text-primary dark:text-primary flex items-center w-32">
+            <form class="flex items-center gap-1 w-full max-w-sm">
+              <label class="block text-sm font-medium text-primary dark:text-primary flex items-center min-w-[5.2rem]">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
                   <path fill="currentColor"
                     d="M15 19.88c.04.3-.06.62-.29.83a.996.996 0 0 1-1.41 0L9.29 16.7a.99.99 0 0 1-.29-.83v-5.12L4.21 4.62a1 1 0 0 1 .17-1.4c.19-.14.4-.22.62-.22h14c.22 0 .43.08.62.22a1 1 0 0 1 .17 1.4L15 10.75zM7.04 5L11 10.06v5.52l2 2v-7.53L16.96 5z" />
                 </svg>
-                <span>Filter by</span>
+                <p>Filter by</p>
               </label>
               <select id="status"
-                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary">
+                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary capitalize max-w-sm w-full">
                 <option selected>Status</option>
-                <option value="">Failed</option>
-                <option value="">Successful</option>
+                <option value="successful">successful</option>
+                <option value="pending">pending</option>
+                <option value="failed">Failed</option>
+                <option value="abandon">abandon</option>
+                <option value="reversed">Reversed</option>
               </select>
+            </form>
+
+            <form class="max-w-sm w-full">
+              <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only">Search</label>
+              <div class="relative">
+                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                  <svg class="w-4 h-4 text-gray-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                    viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                      d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                  </svg>
+                </div>
+                <input type="search" id="default-search"
+                  class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary focus:border-primary"
+                  placeholder="Enter id or tx id..." required />
+                <button type="submit"
+                  class="text-white absolute end-2.5 bottom-2.5 bg-primary focus:outline-none font-medium rounded-lg text-sm px-4 py-2">
+                  Search
+                </button>
+              </div>
             </form>
 
             <div id="date-range-picker" date-rangepicker class="flex items-center justify-start gap-1 w-full lg:w-fit">
@@ -682,7 +705,7 @@
                   </th>
                   <th scope="col" class="px-6 py-3 text-primary">Transaction ID</th>
                   <th scope="col" class="px-6 py-3 text-primary truncate">
-                    Generate receipt
+                    Status
                   </th>
                 </tr>
               </thead>
@@ -842,8 +865,9 @@
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.channel}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">${log.txID}</td>
           <td class="px-6 py-4 text-gray-900 dark:text-white">
-            <button type="button"
-                        class="text-gray-600 text-xs bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 font-medium rounded-lg text-sm px-4 py-2 me-2">Check</button>
+            ${log.status === "pending" ? `<button type="button"
+            class="text-gray-600 text-xs bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 font-medium rounded-lg text-sm px-4 py-2 me-2">Check</button>` : ``
+          }
           </td>
         </tr>
 
