--- a/analytics.html
+++ b/analytics.html
@@ -721,17 +721,18 @@
                                     <div class="flex space-x-2 border border-gray-500 rounded-xl select-none">
                                         <label
                                             class="radio flex flex-grow items-center justify-center rounded-lg p-1 cursor-pointer">
-                                            <input type="radio" name="radio" value="days" class="peer hidden"
-                                                checked="" />
+                                            <input type="radio" name="radio" value="month" class="peer hidden"
+                                                checked="" id="month" onclick="switchMonths()" />
                                             <span
-                                                class="peer-checked:bg-primary peer-checked:text-white text-gray-700 dark:text-white p-2 rounded-lg transition duration-150 ease-in-out text-xs">Days</span>
+                                                class="peer-checked:bg-primary peer-checked:text-white text-gray-700 dark:text-white p-2 rounded-lg transition duration-150 ease-in-out text-xs">Months</span>
                                         </label>
 
                                         <label
                                             class="radio flex flex-grow items-center justify-center rounded-lg p-1 cursor-pointer">
-                                            <input type="radio" name="radio" value="month" class="peer hidden" />
+                                            <input type="radio" name="radio" value="days" class="peer hidden" id="days"
+                                                onclick="switchDays()" />
                                             <span
-                                                class="peer-checked:bg-primary peer-checked:text-white text-gray-700 dark:text-white p-2 rounded-lg transition duration-150 ease-in-out text-xs">Month</span>
+                                                class="peer-checked:bg-primary peer-checked:text-white text-gray-700 dark:text-white p-2 rounded-lg transition duration-150 ease-in-out text-xs">Days</span>
                                         </label>
                                     </div>
                                 </div>
@@ -1001,6 +1002,240 @@
     </main>
     <script src="/js/app.js"></script>
     <script src="/js/data.js"></script>
+    <script>
+        const optionsOverallAnalyticsMonths = {
+            // set the labels option to true to show the labels on the X and Y axis
+            xaxis: {
+                show: true,
+                categories: [
+                    "Jan",
+                    "Feb",
+                    "Mar",
+                    "Apr",
+                    "May",
+                    "Jun",
+                    "Jul",
+                    "Aug",
+                    "Sep",
+                    "Oct",
+                    "Nov",
+                    "Dec",
+                ],
+                labels: {
+                    show: true,
+                    style: {
+                        cssClass: "text-xs font-normal fill-gray-500 dark:fill-gray-400",
+                    },
+                },
+                axisBorder: {
+                    show: false,
+                },
+                axisTicks: {
+                    show: false,
+                },
+            },
+            yaxis: {
+                show: true,
+                labels: {
+                    show: true,
+                    style: {
+                        cssClass: "text-xs font-normal fill-gray-500 dark:fill-gray-400",
+                    },
+                    formatter: function (value) {
+                        return value;
+                    },
+                },
+            },
+            series: [
+                {
+                    name: "Active Users",
+                    data: [250, 100, 250, 400, 250, 300, 370, 340, 400, 420, 450, 460],
+                    color: "#d8b4fe",
+                },
+            ],
+            chart: {
+                sparkline: {
+                    enabled: false,
+                },
+                height: "400px",
+                width: "100%",
+                type: "area",
+                dropShadow: {
+                    enabled: false,
+                },
+                toolbar: {
+                    show: false,
+                },
+            },
+            tooltip: {
+                enabled: false,
+                x: {
+                    show: false,
+                },
+            },
+            fill: {
+                type: "gradient",
+                gradient: {
+                    opacityFrom: 0.55,
+                    opacityTo: 0,
+                    shade: "#d8b4fe",
+                    gradientToColors: ["#d8b4fe"],
+                },
+            },
+            dataLabels: {
+                enabled: false,
+            },
+            stroke: {
+                width: 2,
+            },
+            legend: {
+                show: false,
+            },
+            grid: {
+                show: true,
+                strokeDashArray: 1,
+                padding: {
+                    left: 2,
+                    right: 2,
+                    top: -46,
+                },
+            },
+        };
+
+        const optionsOverallAnalyticsDays = {
+            // set the labels option to true to show the labels on the X and Y axis
+            xaxis: {
+                show: true,
+                categories: [
+                    "Mon",
+                    "Tue",
+                    "Wed",
+                    "Thu",
+                    "Fri",
+                    "Sat",
+                    "Sun",
+                ],
+                labels: {
+                    show: true,
+                    style: {
+                        cssClass: "text-xs font-normal fill-gray-500 dark:fill-gray-400",
+                    },
+                },
+                axisBorder: {
+                    show: false,
+                },
+                axisTicks: {
+                    show: false,
+                },
+            },
+            yaxis: {
+                show: true,
+                labels: {
+                    show: true,
+                    style: {
+                        cssClass: "text-xs font-normal fill-gray-500 dark:fill-gray-400",
+                    },
+                    formatter: function (value) {
+                        return value;
+                    },
+                },
+            },
+            series: [
+                {
+                    name: "Active Users",
+                    data: [250, 100, 250, 400, 250, 300, 370],
+                    color: "#d8b4fe",
+                },
+            ],
+            chart: {
+                sparkline: {
+                    enabled: false,
+                },
+                height: "400px",
+                width: "100%",
+                type: "area",
+                dropShadow: {
+                    enabled: false,
+                },
+                toolbar: {
+                    show: false,
+                },
+            },
+            tooltip: {
+                enabled: false,
+                x: {
+                    show: false,
+                },
+            },
+            fill: {
+                type: "gradient",
+                gradient: {
+                    opacityFrom: 0.55,
+                    opacityTo: 0,
+                    shade: "#d8b4fe",
+                    gradientToColors: ["#d8b4fe"],
+                },
+            },
+            dataLabels: {
+                enabled: false,
+            },
+            stroke: {
+                width: 2,
+            },
+            legend: {
+                show: false,
+            },
+            grid: {
+                show: true,
+                strokeDashArray: 1,
+                padding: {
+                    left: 2,
+                    right: 2,
+                    top: -46,
+                },
+            },
+        };
+
+
+        const daysClicked = document.getElementById("days")
+
+        function switchDays() {
+            if (
+                document.getElementById("labels-chart-analytics") &&
+                typeof ApexCharts !== "undefined"
+            ) {
+                const chart = new ApexCharts(
+                    document.getElementById("labels-chart-analytics"),
+                    optionsOverallAnalyticsDays
+                );
+                chart.render();
+            }
+        }
+
+        function switchMonths() {
+            if (
+                document.getElementById("labels-chart-analytics") &&
+                typeof ApexCharts !== "undefined"
+            ) {
+                const chart = new ApexCharts(
+                    document.getElementById("labels-chart-analytics"),
+                    optionsOverallAnalyticsMonths
+                );
+                chart.render();
+            }
+        }
+
+        if (
+            document.getElementById("labels-chart-analytics") &&
+            typeof ApexCharts !== "undefined"
+        ) {
+            const chart = new ApexCharts(
+                document.getElementById("labels-chart-analytics"),
+                optionsOverallAnalyticsMonths
+            );
+            chart.render();
+        }
+    </script>
 </body>
 
 </html>
