--- a/user-info.html
+++ b/user-info.html
@@ -652,7 +652,7 @@
               </thead>
               <tbody>
                 <tr
-                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500">
+                  class="bg-white border-b dark:bg-dark200 dark:border-dark100 hover:bg-gray-50 dark:hover:bg-dark500 text-xs lg:text-sm">
                   <th scope="row" class="px-6 py-4">
                     <div class="flex items-start gap-2">
                       <img class="w-10 h-10 rounded-full object-cover object-center"
@@ -689,7 +689,7 @@
                     <div class="flex flex-col gap-1">
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Registration Time:</span>
-                        2/28/2024, 12:!2pm
+                        2/28/2024, 12:12pm
                       </p>
                       <p class="text-gray-500 dark:text-gray-400">
                         <span class="font-semibold">Last Login Time:</span>
