--- a/withdrawal-log.html
+++ b/withdrawal-log.html
@@ -632,7 +632,7 @@
                   <span>Filter by</span>
                 </label>
                 <select id="status"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary">
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary capitalize">
                   <option selected>Status</option>
                   <option value="successful">successful</option>
                   <option value="pending">pending</option>
