--- a/payment-overview.html
+++ b/payment-overview.html
@@ -844,7 +844,7 @@
             </div>
           </div>
         </div>
-        <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 mt-8 lg:mt-4">
+        <div class="w-full bg-white rounded-lg dark:bg-dark200 mt-8 lg:mt-4">
           <div class="flex justify-between p-4 md:p-6 pb-0 md:pb-0">
             <div>
               <h5 class="leading-none text-xl lg:text-2xl font-semibold text-gray-900 dark:text-white pb-2">
