--- a/print-receipt.html
+++ b/print-receipt.html
@@ -614,7 +614,7 @@
             Receipt
           </h1>
 
-          <div class="w-full max-w-xl mx-auto shadow bg-white dark:bg-dark200 pt-8 rounded-lg">
+          <div class="w-full max-w-xl mx-auto bg-white dark:bg-dark200 pt-8 rounded-lg">
             <div class="flex flex-col items-center justify-center mb-10">
               <div class="flex items-center">
                 <img src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
