--- a/analytics.html
+++ b/analytics.html
@@ -701,7 +701,7 @@
                     </div>
 
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-8">
-                        <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 h-full">
+                        <div class="w-full bg-white rounded-lg dark:bg-dark200 h-full">
                             <div class="flex justify-between items-center sm:flex-wrap p-4 md:p-6 pb-0 md:pb-0">
                                 <h5
                                     class="leading-none text-base font-semibold text-gray-900 dark:text-white capitalize">
@@ -732,7 +732,7 @@
                             <div id="labels-chart-analytics" class="px-2.5 min-h-full"></div>
                         </div>
 
-                        <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6">
+                        <div class="w-full bg-white rounded-lg dark:bg-dark200 p-4 md:p-6">
                             <h1
                                 class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-2 capitalize mb-8">
                                 number of fraud per month
