--- a/receipt.html
+++ b/receipt.html
@@ -630,7 +630,7 @@
                         </a>
                     </div>
 
-                    <div class="w-full max-w-2xl mx-auto shadow p-4 lg:p-8 rounded-lg bg-white dark:bg-dark200">
+                    <div class="w-full max-w-2xl mx-auto p-4 lg:p-8 rounded-lg bg-white dark:bg-dark200">
                         <div class="flex flex-col items-center justify-center mb-10">
                             <div class="flex items-center">
                                 <img src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
